argocd/overlays/dell7040/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    ingress.cilium.io/tls-passthrough : "true"
spec:
  ingressClassName: cilium
  rules:
  - host: argocd.lab.definit.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
